# esp32s3_smart_keyboard

./: AGENTS.md  CMakeLists.txt  Kconfig.projbuild  README.md  main2.c  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/audio/: CMakeLists.txt  idf_component.yml
components/audio/include/: audio.h
components/audio/src/: audio.c  audio_stub.c
components/ble_hid/: CMakeLists.txt
components/ble_hid/include/: ble_hid.h
components/ble_hid/src/: ble_hid.c
components/board/: CMakeLists.txt
components/board/include/: board.h
components/board/src/: board.c  board_freenove_fnk0104a.c  board_generic_esp32.c  board_generic_s3.c  board_waveshare_esp32s3_touch_lcd_349.c  board_waveshare_esp32s3_touch_lcd_35b.c
components/display/: CMakeLists.txt  idf_component.yml
components/display/include/: display.h
components/display/src/: display.c  display_axs15231b.c  display_ili9341.c
components/fonts/: CMakeLists.txt
components/fonts/include/: fonts.h
components/fonts/src/: font10x20_basic.h  font10x20_cyrillic.h  font12x16_basic.h  font12x16_cyrillic.h  font8x8_basic.h  fonts.c
components/gamepad_i2c/: CMakeLists.txt
components/gamepad_i2c/include/: gamepad_i2c.h
components/gamepad_i2c/src/: gamepad_i2c.c
components/gamepad_spi/: CMakeLists.txt
components/gamepad_spi/include/: gamepad_spi.h
components/gamepad_spi/src/: gamepad_spi.c
components/gamepad_uart/: CMakeLists.txt
components/gamepad_uart/include/: gamepad_uart.h
components/gamepad_uart/src/: gamepad_uart.c
components/hid/: CMakeLists.txt
components/hid/include/: hid.h
components/hid/src/: hid.c
components/input_router/: CMakeLists.txt
components/input_router/include/: input_router.h
components/input_router/src/: input_router.c
components/kb_layout/: CMakeLists.txt
components/kb_layout/include/: kb_layout.h
components/kb_layout/src/: kb_layout.c  layout_de.c  layout_fr.c  layout_ua.c  layout_us.c
components/keyboard_ui/: CMakeLists.txt
components/keyboard_ui/include/: keyboard_ui.h
components/keyboard_ui/src/: keyboard_ui.c
components/narrator/: CMakeLists.txt
components/narrator/include/: narrator.h
components/narrator/src/: narrator.c  narrator_stub.c
components/narrator/wav/: README.md
components/theme/: CMakeLists.txt
components/theme/include/: theme.h
components/theme/src/: theme.c
components/touchscreen/: CMakeLists.txt
components/touchscreen/include/: touchscreen.h
components/touchscreen/src/: touchscreen.c
components/usb_hid/: CMakeLists.txt  idf_component.yml
components/usb_hid/include/: usb_hid.h
components/usb_hid/src/: usb_hid.c
docs/: CONFIGURATION.md  HARDWARE.md  MULTI_LANG.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
